--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="manifest" href="manifest.json">
     <title></title>
+<link rel="apple-touch-icon" sizes="180x180" href="img/touch/apple-icon-180.png">
+<link rel="apple-touch-icon" sizes="167x167" href="img/touch/apple-icon-167.png">
+<link rel="apple-touch-icon" sizes="152x152" href="img/touch/apple-icon-152.png">
+<link rel="apple-touch-icon" sizes="120x120" href="img/touch/apple-icon-120.png">
+
+<meta name="apple-mobile-web-app-capable" content="yes">
 </head>
 <body>
 
