--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html><html lang="en"><head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="manifest" href="manifest.json">
     <title></title>
-
-
-
-
 
 
 <link rel="apple-touch-icon" sizes="180x180" href="img/touch/apple-icon-180.png">
