--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="theme-color" content="#3f51b5">
+    <meta name="Description" content="car plate recognizer, UA cars, Ukraine car plate recognizer">
     <link rel="manifest" href="manifest.json">
     <title></title>
 </head>
