--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="theme-color" content="#3f51b5">
     <meta name="Description" content="car plate recognizer, UA cars, Ukraine car plate recognizer">
     <link rel="manifest" href="manifest.json">
-    <title></title>
+    <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
